docker compose finished

--- a/Complex Streamr Chat/docker-compose.yml
+++ b/Complex Streamr Chat/docker-compose.yml
@@ -26,9 +26,6 @@ services:
       # Default Database Name, when the container starts for the first time, it will create a database with this name.
       POSTGRES_DB: chatdb
 
-    ports:
-      - 5432:5432
-
   # The following runs an Adminer databse web interface for the PostgreSQL database server, more info regarding arguments:
   # https://hub.docker.com/_/adminer
   adminer:
@@ -38,4 +35,25 @@ services:
     ports:
       - 8080:8080
     depends_on:
+      - postgres
+
+  # The following runs the nodechatlogs Dockerfile.
+  logger:
+
+    # Path to nodechatlogs Dockerfile
+    build: nodechatlogs/
+    container_name: 'logger_service'
+    ports:
+      - 3000:3000
+    environment:
+      STREAMRADDRESS: streamr_node
+      STREAMRUSER: Frenzoid
+      STREAMRAPIKEY: NmZkOTliZjQ5ZGMxNDVmN2I0NzJmZWE1YzIwY2Q4ZDI
+      STREAMRTOPIC: 0x7030f4D0dC092449E4868c8DDc9bc00a14C9f561/streamr_chat
+      DBADDRESS: postgres_database
+      DBNAME: chatdb
+      DBUSER: root
+      DBPASSWORD: root
+    depends_on:
+      - streamrnode
       - postgres
